# SpaghettiLAB

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md
Docs/: NOTICE
Firmware/PowerSupply/PD100W-Dish/: README.md
Firmware/PowerSupply/PD100W-Dish/RP2350/: ARCHITECTURE.md  CMakeLists.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  flash.sh
Firmware/PowerSupply/PD100W-Dish/RP2350/src/: main.cpp  ws2812.pio
Firmware/Tests/pico/: CMakeLists.txt
Firmware/Tests/projects/: CMakeLists.txt  main.cpp
Hardware/: NOTICE
Hardware/Core/RP2350-Core/: InOut.kicad_sch  Logickicad_sch.kicad_sch  RP2350-Core.kicad_pcb  RP2350-Core.kicad_pro  RP2350-Core.kicad_sch  USB.kicad_sch  fp-lib-table  sym-lib-table
Hardware/Core/RP2354-Core/: .kicad_sch.kicad_sch  InOut.kicad_sch  Logickicad_sch.kicad_sch  RP2354-Core.kicad_pro  RP2354-Core.kicad_sch
Hardware/Libraries/: SpaghettiLAB.kicad_sym
Hardware/Libraries/SpaghettiLAB.3dshapes/: CONN-TH_PR5L4015-5P-C-F.step  CONN-TH_PR5L4015-5P-C-F.wrl  CONN-TH_PR5L5015-5P-C-H.step  CONN-TH_PR5L5015-5P-C-H.wrl  CONN-TH_YZP0265-12060-01.step  CONN-TH_YZP0265-12060-01.wrl  HTSSOP-28_L9.7-W4.4-P0.65-LS6.4-BL-EP.step  HTSSOP-28_L9.7-W4.4-P0.65-LS6.4-BL-EP.wrl  L1210.wrl  LED0603-RD-1.step  LED0603-RD-1.wrl  RES-SMD_L6.4-W3.2-R2512.wrl  SOP-8_L4.9-W3.9-P1.27-LS6.0-BL-1.wrl  SOT-23-3_L2.9-W1.5-P1.90-LS2.6-BR.wrl  USB-C-SMD_12P-P0.50-H-F_TYPE-C-31-M-14.wrl  USB-C-SMD_TYPEC-324G-BCP24.step  USB-C-SMD_TYPEC-324G-BCP24.wrl
Hardware/Libraries/SpaghettiLAB.pretty/: C0603.kicad_mod  C1206.kicad_mod  CONN-SMD_BM04B-SRSS-TB.kicad_mod  (+24 more)
(+50 files in other folders)
